Add challenge 1 (#2)
* update action

* add initial code plus tests for Product

* Application is fully functional

* Add test coverage

* print location

* disable main test

* test if codecoverage works

* check dir

* add folder of challenge1

* Add snyk scanning

* Add token to snyk task

Co-authored-by: Vincent Free <vincent.free@ing.com>