@@ -12,6 +12,7 @@ plugins {
 
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
+    id 'jacoco'
 }
 
 sourceCompatibility = 15
@@ -20,20 +21,42 @@ targetCompatibility = 15
 dependencies {
     // This dependency is used by the application.
     implementation 'org.apache.commons:commons-csv:1.8'
+    implementation 'org.eclipse.collections:eclipse-collections:10.4.0'
+    implementation 'org.jetbrains:annotations:20.1.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
     testImplementation 'com.google.truth:truth:1.0.1'
 
     // Use JUnit Jupiter Engine for testing.
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
 
 application {
     // Define the main class for the application.
-    mainClassName = 'com.ing.challenge.App'
+    mainClassName = 'com.ing.challenge.ParseApp'
 }
-
+jacoco {
+    toolVersion = "0.8.6"
+}
 test {
     // Use junit platform for unit tests
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
+
+    reports {
+        xml.enabled true
+        csv.enabled false
+    }
 }
